# cytosense_to_ecotaxa_pipeline

./: .gitignore  Dockerfile  MANIFEST.in  README.md  build.sh  install.ps1  install.sh  local.sh  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.ps1  uninstall.sh
.github/workflows/: build.yml
extra_tools/: README.md  addType2CVS.py  features_metadata_cytometry - SSLAMM_micro_setdef_CS101 - collab update.csv  features_metadata_cytometry - SSLAMM_micro_setdef_CS101 - collab update.tmp.csv  features_metadata_cytometry - SSLAMM_micro_setdef_CS101 - collab.csv  generate_mapping.py  update_tsv.py
src/cytosense_to_ecotaxa_pipeline/: convert.py  import.py  main.py  mapping.py  mapping_sample.py  pipeline.py  transform_function.py
tests/: transform_function_test.py
