[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cytosense_to_ecotaxa_pipeline"
dynamic = ["version"]
description = "A pipeline to import Cytosense data into Ecotaxa"
authors = [{name = "Sebastien Galvagno", email = "sebastien.galvagno@imev-mer.fr"}]
requires-python = ">=3.7"
classifiers = [
    # Add appropriate classifiers
]
dependencies = [
    'six',
    'matplotlib',
]

[tool.setuptools]
packages = ["cytosense_to_ecotaxa_pipeline"]
package-dir = {"" = "src"}

[tool.setuptools_scm]