[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cytosense_to_ecotaxa_pipeline"
dynamic = ["version"]
description = "A pipeline to import Cytosense data into Ecotaxa"
authors = [{name = "Sebastien Galvagno", email = "sebastien.galvagno@imev-mer.fr"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'six',
    'matplotlib',
    'Pillow',
    'numpy'
]

[project.scripts]
cytosense_to_ecotaxa_pipeline = "cytosense_to_ecotaxa_pipeline.pipeline:main_cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cytosense_to_ecotaxa_pipeline"]

[tool.setuptools.package-data]
"cytosense_to_ecotaxa_pipeline" = [
    "bin/*",
    "*.py"
]

[tool.setuptools_scm]